Fix family tree pan on safari

--- a/app/assets/stylesheets/family-tree.scss
+++ b/app/assets/stylesheets/family-tree.scss
@@ -8,6 +8,10 @@
     height: 100%;
   }
 
+  svg:focus {
+    outline: none;
+  }
+
   i.loading {
     position: fixed;
     top: 50%;
